--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,7 +423,7 @@ color:#ccc
 	overflow: hidden
 }
 .main-header .logo .logo-lg {
-	display: block
+	display: block;
 }
 .main-header .logo .logo-mini {
 	display: none
@@ -4156,10 +4156,10 @@ table.text-center, table.text-center td, table.text-center th {
 	margin-top: 10px
 }
 .login-logo, .register-logo {
-	font-size: 35px;
-	text-align: center;
-	margin-bottom: 25px;
-	font-weight: 300
+	width: 250px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 35px;
 }
 .login-logo a, .register-logo a {
 	color: #444
